# CourseX

./: .env.example  .gitignore  README.md  STEP_BY_STEP.md  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: deploy.yml
fastapi-app/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  rough.json
fastapi-app/app/generate/: chapter.py  course_desc.py  course_img.py  mcq.py  roadmap.py  subtopics.py  subtopics_expl.py  youtube.py
fastapi-app/app/models/: models.py
nextjs-app/: .env.example  STEP_BY_STEP.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
nextjs-app/prisma/: schema.prisma
nextjs-app/src/app/: globals.css
nextjs-app/src/lib/: auth.ts  cloudinary.ts  db.ts  generate.ts  stripe.ts
nextjs-app/src/types/: chapter.ts  course.ts  index.ts  roadmap.ts
prisma/: schema.prisma
prisma/migrations/20240619164855_next_auth_added/: migration.sql
prisma/migrations/20240625181332_likes/: migration.sql
prisma/migrations/20240704185649_bookmark/: migration.sql
prisma/migrations/20240810173311_follow/: migration.sql
prisma/migrations/20240813064138_implementing/: migration.sql
prisma/migrations/20240816100157_adding/: migration.sql
prisma/migrations/20240817090255_adding/: migration.sql
src/app/: layout.tsx  page.tsx
src/app/(inner_routes)/: layout.tsx  loading.tsx
src/app/create/: actions.ts  page.tsx
src/components/: CardComp.tsx
src/lib/: auth.ts  generate.ts
src/store/: course.ts  user.ts
src/types/: user.ts
(+100 files in other folders)
